# dotfiles

./: .gitconfig  .gitignore  .inputrc  setup.sh  setup_symlink.sh
oh_my_posh/: .stelbent-compact.minimal.omp.json.swp  stelbent-compact.minimal.omp.json  stelbent-compact.minimal.omp.json.bak
python/: pyproject.toml  pyrightconfig.json
shell/: ._vimrc.swp  .bashWork  .bash_profile  .bashrc  .gitconfig  .inputrc  .vimrc  Microsoft.PowerShell_profile.ps1  _vimrc  case_insensitive_completion.sh  create_input_rc.sh  git-prompt.sh  git_aliases.sh  init.vim  profile.ps1  ssh_agent_auto_start.sh  windows_terminal.json
vscode/: .vsrc  keybindings.json  settings.json
